<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/dismiss_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/bebas_neue_regular"
        android:text="@string/dismiss_position"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:fontFamily="@font/bebas_neue_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/title_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dismiss_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_divider"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <RadioGroup
                android:id="@+id/radio_group_dismiss_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton android:id="@+id/radio_dismiss_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_pos_bottom" android:paddingVertical="8dp" />
                <RadioButton android:id="@+id/radio_dismiss_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_pos_top" android:paddingVertical="8dp" />
                <RadioButton android:id="@+id/radio_dismiss_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_pos_left" android:paddingVertical="8dp" />
                <RadioButton android:id="@+id/radio_dismiss_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_pos_right" android:paddingVertical="8dp" />
                <RadioButton android:id="@+id/radio_dismiss_center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_pos_center" android:paddingVertical="8dp" />
            </RadioGroup>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
