<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/log_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/bebas_neue_regular"
        android:text="@string/log_history"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:fontFamily="@font/bebas_neue_regular"
        app:layout_constraintBottom_toTopOf="@id/title_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/title_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/log_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/log_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/log_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_divider">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/log_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                android:text="@string/no_logs"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="12sp"
                app:fontFamily="@font/spacemono_regular" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/log_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnClearLogs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_scroll_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearLogs"
        style="?attr/materialButtonTonalStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/clear_logs"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/spacemono_bold"
        app:icon="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>